# execy

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: main.yml  python-publish.yml
src/exectime/: __init__.py  exec.py
src/execy/: __init__.py  exec.py
tests/: test_exec.py
